--- a/arts/templates/index.html
+++ b/arts/templates/index.html
@@ -45,14 +45,9 @@
 			<button class="search-btn"><i class="fa fa-search"></i></button>
 		</div>
 		<ul class="main-menu">
-			<li><a href="index.html">Home</a></li>
+			<li><a href="/#">Home</a></li>
 			<li><a href="about.html">About the Artist </a></li>
-			<li>
-				<a href="#">Portfolio</a>
-				<ul class="sub-menu">
-					<li><a href="portfolio.html">Portfolio</a></li>
-				</ul>
-			</li>
+			<li><a href="#">Portfolio</a></li>
 			<li><a href="blog.html">Services</a></li>
 			<li><a href="elements.html">Elements</a></li>
 			<li><a href="contact.html">Contact</a></li>
@@ -67,121 +62,19 @@
 	<!-- Hero section  -->
 	<div class="hero-section">
 		<div class="hero-slider owl-carousel">
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/1.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/2.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/3.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/4.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/5.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/6.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/7.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
+		{% block content %}
+            
+         {% endblock %}	
+
 		</div>
-		<div class="hero-slider owl-carousel">
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/8.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/9.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/10.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a></div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/11.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/12.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/13.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/14.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-		</div>
-		<div class="hero-slider owl-carousel">
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/15.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/16.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/17.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/18.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/19.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/20.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-			<div class="hero-item portfolio-item set-bg" data-setbg="{% static 'img/portfolio/21.jpg' %}">
-				<a href="portfolio.html" class="hero-link">
-					<h2>Take a look at my Portfolio</h2>
-				</a>
-			</div>
-		</div>
+    </div>			
+		
 		<div class="hero-social-links">
 			<a href=""><i class="fa fa-pinterest"></i></a>
 			<a href=""><i class="fa fa-facebook"></i></a>
 			<a href=""><i class="fa fa-twitter"></i></a>
-			<a href=""><i class="fa fa-dribbble"></i></a>
-			<a href=""><i class="fa fa-behance"></i></a>
+			<a href=""><i class="fa fa-whatsapp"></i></a>
+			<a href=""><i class="fa fa-instagram"></i></a>
 		</div>
 	</div>
 	<!-- Hero section end  -->
@@ -193,7 +86,7 @@
 				<div class="row">
 					<div class="col-xl-6 col-lg-7 p-0">
 						<div class="intro-text">
-							<h2>My name is Sam. I’m a photographer</h2>
+							<h2>I'm Tantarts. I’m a photographer</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis commodo viverra maecenas. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
 							<a href="#" class="sp-link">Take a look @my portfolio</a>
 						</div>
@@ -219,6 +112,42 @@
 		</div>
 	</section>
 	<!-- Intro section end  -->
+
+
+	<!--FAQ-->
+<div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        Accordion Item #1
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        Accordion Item #2
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+    </div>
+  </div>
+</div>
+
 	
 	<!-- Footer section   -->
 	<footer class="footer-section">
